--- a/myapp/app/src/main/res/layout/activity_ingredients.xml
+++ b/myapp/app/src/main/res/layout/activity_ingredients.xml
@@ -20,41 +20,41 @@
             app:title="@string/app_ingredients"
             app:titleTextColor="@color/colorWhite" />
 
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:id="@+id/ingredients_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbar"
-            android:columnCount="4"
+            android:layout_margin="8dp"
+            android:layout_marginBottom="0dp"
             android:orientation="horizontal"
-            android:padding="8dp"
-            android:rowCount="4">
+            android:padding="2dp">
 
             <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_columnSpan="2"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
+                android:layout_weight="2"
                 android:text="@string/name_ingredient"
                 android:textSize="16sp" />
 
             <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_columnSpan="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
                 android:text="@string/quantity"
                 android:textSize="16sp" />
 
             <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_columnSpan="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
                 android:text="@string/price"
                 android:textSize="16sp" />
 
-        </GridLayout>
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_ingredients"
@@ -63,6 +63,7 @@
             android:layout_below="@id/ingredients_header"
             android:layout_margin="16dp"
             android:scrollbars="vertical" />
+
     </RelativeLayout>
 
 </LinearLayout>
