--- a/myapp/app/src/main/res/layout/ingredient_item.xml
+++ b/myapp/app/src/main/res/layout/ingredient_item.xml
@@ -6,35 +6,40 @@
     android:layout_margin="4dp"
     card_view:cardCornerRadius="4dp">
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="4"
         android:orientation="horizontal"
-        android:padding="8dp"
-        android:rowCount="4">
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/rv_ingredient_name"
-            android:layout_columnSpan="2"
-            android:layout_gravity="fill"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:padding="4dp"
             android:text="@string/app_ingredients"
             android:textSize="16dp" />
 
         <TextView
             android:id="@+id/rv_ingredient_quantity"
-            android:layout_columnSpan="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:hint="@string/quantity"
             android:padding="4dp"
             android:textSize="16dp" />
 
         <TextView
             android:id="@+id/rv_ingredient_price"
-            android:layout_columnSpan="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:hint="@string/price"
             android:padding="4dp"
             android:textSize="16dp" />
 
-    </GridLayout>
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
